--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "lsof": "^0.1.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
